--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Mx. Minutes</title>
+
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
