--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
             p {
                 margin: 0;
             }
+
+            .w3-margin-right {
+                margin-right: 8px !important;
+            }
         </style>
     </head>
     <body>
