--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,19 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         />
         <style>
-            h1,
-            h2,
-            h3,
             h4,
             h5,
             h6 {
                 margin: 0 0 10px;
+            }
+
+            h4 {
+                font-weight: 700;
+            }
+
+            h5,
+            h6 {
+                font-weight: 500;
             }
 
             p {
