feat: improve margin w3css classes

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,14 @@
             .w3-margin-right {
                 margin-right: 8px !important;
             }
+
+            .w3-margin-left {
+                margin-left: 8px !important;
+            }
+
+            .w3-margin-bottom:last-of-type {
+                margin-bottom: 0px !important;
+            }
         </style>
     </head>
     <body>
